--- a/Views/Home/Duurzaamheidsopties.cshtml
+++ b/Views/Home/Duurzaamheidsopties.cshtml
@@ -1,31 +1,7 @@
-﻿@{
+﻿
+@{
     ViewData["Title"] = "Duurzaamheidsopties";
 }
-<style>
-.center {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  width: 50%;
-}
-</style>
 
-<body>
-
-    <img src="https://cdn.discordapp.com/attachments/1151428021341925472/1168502428694491247/image.png?ex=6551ffb0&is=653f8ab0&hm=a5fc1372794597f3328269153235a0583304ef434cb1c8b04420f438d5e3c74d&"style="width: 80%" class="center">
-    <form class="d-flex center">
-        <button class="nav-link dropdown-toggle btn btn-white my-2 my-sm-0" style="color: grey; border-color:grey" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Dropdown</button>
-        <div style="color: grey; border-color:grey" class="dropdown-menu">
-            <a class="dropdown-item" href="#">Action</a>
-            <a class="dropdown-item" href="#">Another action</a>
-            <a class="dropdown-item" href="#">Something else here</a>
-            <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="#">Separated link</a>
-        </div>
-        <input class="form-control me-sm-2" style="color: grey; border-color:grey;" type="search" placeholder="Search" width="300">
-        <button class="btn btn-white my-2 my-sm-0" style="color: grey; border-color:grey" type="submit"><img src="https://cdn.discordapp.com/attachments/1151428021341925472/1168508538956558386/image.png?ex=65520561&is=653f9061&hm=6891e88cfcdb900309d121f678e1c690a44447b8cd5355f0271a8004f3d21ae2&" width="25" height="25" /></button>
-    </form>
-
-
-</body>
+<h1>Duurzaamheidsopties</h1>
 
