homepagina en duurzaamheidsopties pagina aangepast

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,7 +1,6 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
 }
-
 <style>
 
     .contactcontainer {
@@ -390,6 +389,9 @@ media (prefers-reduced-motion: reduce) {
             <li id="carousel__slide1" tabindex="0" class="carousel__slide">
                 <div class="carousel__snapper">
                     <div id="roundcart" class="card text-black bg-white mb-3" style="width: 81rem; height: 39.4rem;">
+                        <div class="card-body">
+                        <h1>pagina 1</h1>
+                    </div>
                     </div>
                     <a href="#carousel__slide4" class="carousel__prev">Go to last slide</a>
                     <a href="#carousel__slide2" class="carousel__next">Go to next slide</a>
@@ -398,6 +400,9 @@ media (prefers-reduced-motion: reduce) {
             <li id="carousel__slide2" tabindex="0" class="carousel__slide">
                 <div class="carousel__snapper"></div>
                 <div id="roundcart" class="card text-black bg-white mb-3" style="width: 81rem; height: 39.4rem;">
+                    <div class="card-body">
+                        <h1>pagina 2</h1>
+                    </div>
                     </div>
                 <a href="#carousel__slide1" class="carousel__prev">Go to previous slide</a>
                 <a href="#carousel__slide3" class="carousel__next">Go to next slide</a>
@@ -405,6 +410,9 @@ media (prefers-reduced-motion: reduce) {
             <li id="carousel__slide3" tabindex="0" class="carousel__slide">
                 <div class="carousel__snapper"></div>
                 <div id="roundcart" class="card text-black bg-white mb-3" style="width: 81rem; height: 39.4rem;">
+                    <div class="card-body">
+                        <h1>pagina 3</h1>
+                    </div>
                     </div>
                 <a href="#carousel__slide2" class="carousel__prev">Go to previous slide</a>
                 <a href="#carousel__slide4" class="carousel__next">Go to next slide</a>
@@ -412,6 +420,9 @@ media (prefers-reduced-motion: reduce) {
             <li id="carousel__slide4" tabindex="0" class="carousel__slide">
                 <div class="carousel__snapper"></div>
                 <div id="roundcart" class="card text-black bg-white mb-3" style="width: 81rem; height: 39.4rem;">
+                    <div class="card-body">
+                        <h1>pagina 4</h1>
+                    </div>
                     </div>
                 <a href="#carousel__slide3" class="carousel__prev">Go to previous slide</a>
                 <a href="#carousel__slide1" class="carousel__next">Go to first slide</a>
@@ -445,7 +456,7 @@ media (prefers-reduced-motion: reduce) {
             <p>Adres: Straatnaam 123</p>
             <p>Postcode: 1234 AB Plaatsnaam</p>
             <p>Telefoon: 0123-456789</p>
-            <p>Email: info@HetSmikkelhoekje.nl</p>
+            <p>Email: info@Greenpath.nl</p>
         </div>
          
     </div>
