--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -58,7 +58,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
-                        <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Duurzaamheidsopties">Duurzaamheidsopties </a>
+                        <a class="nav-link text-dark" asp-area="" asp-controller="Products" asp-action="Index">Duurzaamheidsopties </a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Voortgang">Voortgang</a>
