Changed types of emmisions for products

--- a/Views/Products/Delete.cshtml
+++ b/Views/Products/Delete.cshtml
@@ -18,10 +18,22 @@
             @Html.DisplayFor(model => model.Name)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Emmission)
+            @Html.DisplayNameFor(model => model.CO2Emmision)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Emmission)
+            @Html.DisplayFor(model => model.CO2Emmision)
+        </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.WaterFootprint)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.WaterFootprint)
+        </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.EcologicalFootprint)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.EcologicalFootprint)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Category)
