--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -324,7 +324,7 @@ media (prefers-reduced-motion: reduce) {
                                 <p>
                                     Albert Heijn Vegetarische Burger
                                 </p>
-                                <button type="button" class="btn btn-success" style="float:left"><h1 style="font-size: 13px;">Naar product</h1></button>
+                                <button type="button" class="btn btn-success" style="float:left"><h1 style="font-size: 13px;" onclick="window.location.href = '../Products/Details/6';">Naar product</h1></button>
                             </h10>
                         </div>
                 <img src="https://cdn.discordapp.com/attachments/1151428021341925473/1167533304187207751/image.png?ex=654e791f&is=653c041f&hm=da534c9b4ba679713de2a1d72c64c69bcaaa9a4def01a56023eadf95f57070ad&" width="100"/> 
@@ -342,7 +342,7 @@ media (prefers-reduced-motion: reduce) {
                                     Framework Laptop
                                     13.5 inch notebook
                                 </p>
-                                <button type="button" class="btn btn-success" style="float:left"><h1 style="font-size: 13px;">Naar product</h1></button>
+                                <button type="button" class="btn btn-success" style="float:left" onclick="window.location.href = '../Products/Details/8';"><h1 style="font-size: 13px;">Naar product</h1></button>
                             </h10>
                         </div>
                         <img src="https://cdn.discordapp.com/attachments/1015233182209159201/1168269439398072330/image.png?ex=655126b3&is=653eb1b3&hm=9c9ff256b341628ac240c54095ffeff324d087e6b736481078327d600afb32ac&" width="112" />
@@ -362,7 +362,7 @@ media (prefers-reduced-motion: reduce) {
                                     <br />
                                     <br />
                                 </p>
-                                <button type="button" class="btn btn-success" style="float:left"><h1 style="font-size: 13px;">Naar product</h1></button>
+                                <button type="button" class="btn btn-success" style="float:left"><h1 style="font-size: 13px;" onclick="window.location.href = '../Products/Details/7';"> Naar product</h1></button>
                     </h10>
                         </div>
                         <img src="https://cdn.discordapp.com/attachments/1015233182209159201/1168269639168573460/image.png?ex=655126e3&is=653eb1e3&hm=8227c4022c600f50119b364b51d475d5dbaafb313db1a6e3ff89c6b265fd41f0&" width="112" />
