--- a/Views/Products/Details.cshtml
+++ b/Views/Products/Details.cshtml
@@ -40,7 +40,7 @@
         </h5>
         <h5 style="display: flex; align-items: center;">
             <img src="https://cdn.discordapp.com/attachments/1015233182209159201/1169736373792682054/woqFakMFydcQAAAABJRU5ErkJggg.png?ex=65567ce4&is=654407e4&hm=2f3a5f5bbf2285228cd0bd0d71ab146ba04fd8608124f77a75d965bd63a38f19&" height="50" width="50" style="margin-right: 10px;">
-            Het beslaat een oppervlakte van @Html.DisplayFor(model => model.EcologicalFootprint) 0.29 m2/jaar voor landgebruik.
+            Het beslaat een oppervlakte van @Html.DisplayFor(model => model.EcologicalFootprint) m2/jaar voor landgebruik.
         </h5>
 
     </div>
