--- a/Views/Products/Create.cshtml
+++ b/Views/Products/Create.cshtml
@@ -38,6 +38,11 @@
                 <span asp-validation-for="Category" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="QualityMark_link" class="control-label"></label>
+                <input asp-for="QualityMark_link" class="form-control" />
+                <span asp-validation-for="QualityMark_link" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <label asp-for="Image_link" class="control-label"></label>
                 <input asp-for="Image_link" class="form-control" />
                 <span asp-validation-for="Image_link" class="text-danger"></span>
