--- a/Views/Products/Details.cshtml
+++ b/Views/Products/Details.cshtml
@@ -38,6 +38,7 @@
                 <img src="https://cdn.discordapp.com/attachments/1015233182209159201/1169735693094895706/uypu4ZSlA8AAAAAElFTkSuQmCC.png?ex=65567c41&is=65440741&hm=e2e1933aa458d7fc48af8b2a13040c59a77386f16b1b2a9067893c316c79f28e&" height="50" width="50" style="margin-right: 10px;">
             Het vereist @Html.DisplayFor(model => model.WaterFootprint) L water bij de fabricage.
         </h5>
+        @Html.DisplayFor(model => model.QualityMark_link)
         <h5 style="display: flex; align-items: center;">
             <img src="https://cdn.discordapp.com/attachments/1015233182209159201/1169736373792682054/woqFakMFydcQAAAABJRU5ErkJggg.png?ex=65567ce4&is=654407e4&hm=2f3a5f5bbf2285228cd0bd0d71ab146ba04fd8608124f77a75d965bd63a38f19&" height="50" width="50" style="margin-right: 10px;">
             Het beslaat een oppervlakte van @Html.DisplayFor(model => model.EcologicalFootprint) m2/jaar voor landgebruik.
