details products aan gepast

--- a/Views/Products/Index.cshtml
+++ b/Views/Products/Index.cshtml
@@ -109,6 +109,12 @@
                                 </div>
                         </div>
                     </td>
+                    <td>
+                        <br />
+                        <br />
+                        <br />
+                        <img src="@Html.DisplayFor(modelItem => item.QualityMark_link)" height="100" width="100" />
+                    </td>
 @*                    <td>
                         @Html.DisplayFor(modelItem => item.CO2Emmision)
                     </td>
