--- a/Views/Products/Details.cshtml
+++ b/Views/Products/Details.cshtml
@@ -108,6 +108,6 @@
 </div>*@
 <div>
     <a asp-action="Edit" asp-route-id="@Model?.Id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+@*    <a asp-action="Index">Back to List</a>*@
     <button type="button" class="btn btn-success" style="float:left"><h1 style="font-size: 13px;" onclick="window.location.href = '..';"> Terug</h1></button>
 </div>
