--- a/Views/Weekly_report/Index.cshtml
+++ b/Views/Weekly_report/Index.cshtml
@@ -45,7 +45,7 @@
 <h1>Index</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-controller="Goals" asp-action="Create">Create New</a>
 </p>
 <table class="table">
     <tbody>
@@ -65,9 +65,9 @@
                     @Html.DisplayFor(modelItem => item.Consumer.Id)
                 </td>
                 <td>
-                    <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                    <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                    <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                    <a asp-controller="Goals" asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
+                    <a asp-controller="Goals" asp-action="Details" asp-route-id="@item.Id">Details</a> |
+                    <a asp-controller="Goals" asp-action="Delete" asp-route-id="@item.Id">Delete</a>
                 </td>
             </tr>
         }
